fixed packages alignment

--- a/depictions/style.css
+++ b/depictions/style.css
@@ -2,10 +2,6 @@
     pointer-events: none;
 }
 
-body{
-    background-color: black;
-}
-
 .link-item {
     list-style-type: none;
     padding: 17px 15px;
